fix: attempt z-index fix (does not work yet)

--- a/public/style/drawer.css
+++ b/public/style/drawer.css
@@ -1,5 +1,6 @@
 .drawer-bar-all {
   background: #fff;
+  z-index: 2147483647;
 }
 
 .drawer-bar-closed {
